<resources>
    <string name="app_name">Intents</string>
    <string name="hello_string">Hello!</string>
    <string name="login_string">Sign in:</string>
    <string name="email_hint">Your e-mail</string>
    <string name="password_hint">Your password</string>
    <string name="user_agree_text">I agree to the terms of services</string>
    <string name="log_in_button_text">Log in</string>
    <string name="hello_image_src">https://www.freeimages.com/download/file/dfc4fb4259559aded8784be143f3513e/640x480</string>
    <string name="login_success_string">Login success</string>
    <string name="login_failed_string">Login failed</string>
    <string name="email_header">E-mail</string>
    <string name="password_header">Password</string>
    <string name="anr_button">ANR Button</string>
    <string name="invalid_email">Invalid e-mail address</string>
    <string name="phone_number">phone number</string>
    <string name="call_text">Call</string>
    <string name="invalid_phone_number">Invalid phone number!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>